# XPP

./: README.md  RELEASE_NOTES_v0.3.md  build_exe.py  build_xite_exe.bat  language-configuration.json  package.json  pyproject.toml  setup.bat  test.xp  x.bat  x_engine.py  xite.bat  xite.py  xite.spec  xp.tmLanguage.json
examples/: ai_demo.xp  collections.xp  fib.xp  fib_fast.xp  hello.xp
xpp_core/: __init__.py  ai_engine.py  ast_parser.py  cli.py  fast_transpiler.py  strict_compiler.py  strict_vm.py
