[project]
name = "xpp-lang"
version = "0.3.1"
description = "X++ (XPlusPlus) v0.3 – strict pseudocode compiler + Xite IDE + AI intent fallback"
authors = [{name="Aagastya Verma", email="aagastyaverma6-sys@github"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["lark>=1.1.5", "requests>=2.28"]
license = {text = "GPL-3.0-or-later"}
keywords = ["language", "compiler", "interpreter", "ai", "ide"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Compilers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Environment :: Win32 (MS Windows)",
  "Environment :: X11 Applications"
]

[project.scripts]
x = "xpp_core.cli:main"
xpp = "xpp_core.cli:main"
xite = "xite:main"

[project.urls]
Homepage = "https://github.com/aagastyaverma6-sys/XPP"
Repository = "https://github.com/aagastyaverma6-sys/XPP"
"Bug Tracker" = "https://github.com/aagastyaverma6-sys/XPP/issues"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["xpp_core*"]

[tool.setuptools.py-modules]
py-modules = ["xite", "x_engine"]
